--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.fitness.fitnessdashweb.1.0.0.11.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.fitness.fitnessdashweb.1.0.0.11.dll.config
@@ -7,78 +7,78 @@
         <templates>
             <template name="activex\fitness\fitnessdashweb.1.0.0.11.dll">
 				<modifications>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{0524B6CF-5847-4AB6-A746-1ACFDD084655}"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{0524B6CF-5847-4AB6-A746-1ACFDD084655}"
 							valueName="" value="activex" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
 							valueName="APPID" value="{0524B6CF-5847-4AB6-A746-1ACFDD084655}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTFITNESSDASCONTROL.1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTFITNESSDASCONTROL.1"
 							valueName="" value="CPlayFirstFitnessDasControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTFITNESSDASCONTROL.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTFITNESSDASCONTROL.1\CLSID"
 							valueName="" value="{26E6B759-DEEB-42A1-A21C-78CD29098411}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTFITNESSDASCONTROL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTFITNESSDASCONTROL"
 							valueName="" value="CPlayFirstFitnessDasControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTFITNESSDASCONTROL\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTFITNESSDASCONTROL\CLSID"
 							valueName="" value="{26E6B759-DEEB-42A1-A21C-78CD29098411}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTFITNESSDASCONTROL\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTFITNESSDASCONTROL\CURVER"
 							valueName="" value="activex.PlayFirstFitnessDasControl.1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}"
 							valueName="" value="CPlayFirstFitnessDasControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\PROGID"
 							valueName="" value="activex.PlayFirstFitnessDasControl.1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="activex.PlayFirstFitnessDasControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\fitness\FitnessDashWeb.1.0.0.11.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\CONTROL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\fitness\FitnessDashWeb.1.0.0.11.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}"
 							valueName="APPID" value="{0524B6CF-5847-4AB6-A746-1ACFDD084655}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\TYPELIB"
 							valueName="" value="{0524B6CF-5847-4AB6-A746-1ACFDD084655}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0"
 							valueName="" value="activex 1.0 Type Library" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\fitness\FitnessDashWeb.1.0.0.11.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0\HELPDIR"
 							valueName="" value="" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{45BA5614-16BD-4FF9-A93B-A3DF60878643}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{45BA5614-16BD-4FF9-A93B-A3DF60878643}"
 							valueName="" value="IPlayFirstFitnessDasControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{45BA5614-16BD-4FF9-A93B-A3DF60878643}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{45BA5614-16BD-4FF9-A93B-A3DF60878643}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{45BA5614-16BD-4FF9-A93B-A3DF60878643}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{45BA5614-16BD-4FF9-A93B-A3DF60878643}\TYPELIB"
 							valueName="" value="{0524B6CF-5847-4AB6-A746-1ACFDD084655}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{45BA5614-16BD-4FF9-A93B-A3DF60878643}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{45BA5614-16BD-4FF9-A93B-A3DF60878643}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
