--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.mysteryofsharkisland.msi.1.0.0.8.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.mysteryofsharkisland.msi.1.0.0.8.dll.config
@@ -7,77 +7,77 @@
         <templates>
             <template name="activex\mysteryofsharkisland\msi.1.0.0.8.dll">
 				<modifications>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{82530560-6E35-439E-ABC4-59F0A5E32B51}"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{82530560-6E35-439E-ABC4-59F0A5E32B51}"
 							valueName="" value="activex" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
 							valueName="APPID" value="{82530560-6E35-439e-ABC4-59F0A5E32B51}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTMSICONTROL.1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTMSICONTROL.1"
 							valueName="" value="CPlayFirstmsiControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTMSICONTROL.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTMSICONTROL.1\CLSID"
 							valueName="" value="{226ACC34-3194-40e2-9AE8-834FCFE9E80D}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTMSICONTROL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTMSICONTROL"
 							valueName="" value="CPlayFirstmsiControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTMSICONTROL\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTMSICONTROL\CLSID"
 							valueName="" value="{226ACC34-3194-40e2-9AE8-834FCFE9E80D}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTMSICONTROL\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTMSICONTROL\CURVER"
 							valueName="" value="activex.PlayFirstmsiControl.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}"
 							valueName="" value="CPlayFirstmsiControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\PROGID"
 							valueName="" value="activex.PlayFirstmsiControl.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="activex.PlayFirstmsiControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\MysteryOfSharkIsland\msi.1.0.0.8.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\CONTROL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\MysteryOfSharkIsland\msi.1.0.0.8.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}"
 							valueName="APPID" value="{82530560-6E35-439e-ABC4-59F0A5E32B51}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\TYPELIB"
 							valueName="" value="{82530560-6E35-439E-ABC4-59F0A5E32B51}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0"
 							valueName="" value="activex 1.0 Type Library" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\MysteryOfSharkIsland\msi.1.0.0.8.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0\HELPDIR"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\MysteryOfSharkIsland\"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{FBDD51AF-CD1C-466D-8FE5-8AE0EE615B03}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{FBDD51AF-CD1C-466D-8FE5-8AE0EE615B03}"
 							valueName="" value="IPlayFirstmsiControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{FBDD51AF-CD1C-466D-8FE5-8AE0EE615B03}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{FBDD51AF-CD1C-466D-8FE5-8AE0EE615B03}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{FBDD51AF-CD1C-466D-8FE5-8AE0EE615B03}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{FBDD51AF-CD1C-466D-8FE5-8AE0EE615B03}\TYPELIB"
 							valueName="" value="{82530560-6E35-439E-ABC4-59F0A5E32B51}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{FBDD51AF-CD1C-466D-8FE5-8AE0EE615B03}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{FBDD51AF-CD1C-466D-8FE5-8AE0EE615B03}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
