--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.orbitallauncher-2.0.15.orbitallauncher.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.orbitallauncher-2.0.15.orbitallauncher.dll.config
@@ -7,25 +7,25 @@
         <templates>
             <template name="activex\orbitallauncher-2.0.15\orbitallauncher.dll">
 				<modifications>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{E03EEB49-B0CB-46A3-A84B-BA758243A7B0}"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{E03EEB49-B0CB-46A3-A84B-BA758243A7B0}"
 							valueName="" value="Orbital Launcher" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{E03EEB49-B0CB-46A3-A84B-BA758243A7B0}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{E03EEB49-B0CB-46A3-A84B-BA758243A7B0}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\OrbitalLauncher-2.0.15\OrbitalLauncher.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{E03EEB49-B0CB-46A3-A84B-BA758243A7B0}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{E03EEB49-B0CB-46A3-A84B-BA758243A7B0}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="Apartment" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{651D63A0-699F-4859-93E5-08CD1F48CABD}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{651D63A0-699F-4859-93E5-08CD1F48CABD}\1.0"
 							valueName="" value="Mind Control Orbital Launcher 1.0 Type Library"
 							valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{651D63A0-699F-4859-93E5-08CD1F48CABD}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{651D63A0-699F-4859-93E5-08CD1F48CABD}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{651D63A0-699F-4859-93E5-08CD1F48CABD}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{651D63A0-699F-4859-93E5-08CD1F48CABD}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\OrbitalLauncher-2.0.15\OrbitalLauncher.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{651D63A0-699F-4859-93E5-08CD1F48CABD}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{651D63A0-699F-4859-93E5-08CD1F48CABD}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
