--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.reflexivewebgameloader.reflexivewebgameloader.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.reflexivewebgameloader.reflexivewebgameloader.dll.config
@@ -7,85 +7,85 @@
         <templates>
             <template name="activex\reflexivewebgameloader\reflexivewebgameloader.dll">
 				<modifications>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\REFLEXIVEWEBGAMELOADER.WEBGAMELOADER.1"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\REFLEXIVEWEBGAMELOADER.WEBGAMELOADER.1"
 							valueName="" value="WebGameLoader Class" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\REFLEXIVEWEBGAMELOADER.WEBGAMELOADER.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\REFLEXIVEWEBGAMELOADER.WEBGAMELOADER.1\CLSID"
 							valueName="" value="{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\REFLEXIVEWEBGAMELOADER.WEBGAMELOADER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\REFLEXIVEWEBGAMELOADER.WEBGAMELOADER"
 							valueName="" value="WebGameLoader Class" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\REFLEXIVEWEBGAMELOADER.WEBGAMELOADER\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\REFLEXIVEWEBGAMELOADER.WEBGAMELOADER\CLSID"
 							valueName="" value="{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\REFLEXIVEWEBGAMELOADER.WEBGAMELOADER\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\REFLEXIVEWEBGAMELOADER.WEBGAMELOADER\CURVER"
 							valueName="" value="ReflexiveWebGameLoader.WebGameLoader.1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}"
 							valueName="" value="WebGameLoader Class" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\PROGID"
 							valueName="" value="ReflexiveWebGameLoader.WebGameLoader.1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="ReflexiveWebGameLoader.WebGameLoader"
 							valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\PROGRAMMABLE"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\PROGRAMMABLE"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\ReflexiveWebGameLoader\ReflexiveWebGameLoader.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="Apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\CONTROL"
 							valueName="" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\INSERTABLE"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\INSERTABLE"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\ReflexiveWebGameLoader\ReflexiveWebGameLoader.dll, 101"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\TYPELIB"
 							valueName="" value="{B46171CA-E318-4323-8394-3FD32C70C9EE}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\VERSION"
 							valueName="" value="1.0.0.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0"
 							valueName="" value="ReflexiveWebGameLoader 1.0 Type Library"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\ReflexiveWebGameLoader\ReflexiveWebGameLoader.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0\HELPDIR"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\ReflexiveWebGameLoader\"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{EAFAE8F1-AC62-47A4-91A4-21020ED1DA86}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{EAFAE8F1-AC62-47A4-91A4-21020ED1DA86}"
 							valueName="" value="IWebGameLoaderEvents" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{EAFAE8F1-AC62-47A4-91A4-21020ED1DA86}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{EAFAE8F1-AC62-47A4-91A4-21020ED1DA86}\PROXYSTUBCLSID32"
 							valueName="" value="{00020420-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{EAFAE8F1-AC62-47A4-91A4-21020ED1DA86}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{EAFAE8F1-AC62-47A4-91A4-21020ED1DA86}\TYPELIB"
 							valueName="" value="{B46171CA-E318-4323-8394-3FD32C70C9EE}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{EAFAE8F1-AC62-47A4-91A4-21020ED1DA86}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{EAFAE8F1-AC62-47A4-91A4-21020ED1DA86}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CDE2083F-3FFB-4950-B5D4-D56E3BE6D476}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CDE2083F-3FFB-4950-B5D4-D56E3BE6D476}"
 							valueName="" value="IWebGameLoader" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CDE2083F-3FFB-4950-B5D4-D56E3BE6D476}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CDE2083F-3FFB-4950-B5D4-D56E3BE6D476}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CDE2083F-3FFB-4950-B5D4-D56E3BE6D476}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CDE2083F-3FFB-4950-B5D4-D56E3BE6D476}\TYPELIB"
 							valueName="" value="{B46171CA-E318-4323-8394-3FD32C70C9EE}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CDE2083F-3FFB-4950-B5D4-D56E3BE6D476}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CDE2083F-3FFB-4950-B5D4-D56E3BE6D476}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
