--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/hypercosm.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/hypercosm.config
@@ -9,9 +9,9 @@
 			<template name="hypercosm">
 				<mode name="SOFTWARE" commandLine="Hypercosm\components\Hypercosm3D5E449320.exe &quot;%FP_HTDOCS_FILE%&quot;" workingDirectory="%FP_HTDOCS_FILE_DIR%" />
 				<modifications runAsAdministrator="true">
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\HYPERCOSM\HYPERCOSM PLAYER" valueName="SYSTEMDATAPATH" value="%FP_STARTUP_PATH%\Hypercosm" valueKind="String" />
-					</registryBackups>
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\HYPERCOSM\HYPERCOSM PLAYER" valueName="SYSTEMDATAPATH" value="%FP_STARTUP_PATH%\Hypercosm" valueKind="String" />
+					</registryStates>
 					<oldCPUSimulator targetRate="233" />
 				</modifications>
 			</template>
