--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/unitywebplayer2scaling.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/unitywebplayer2scaling.config
@@ -12,11 +12,11 @@
 					  <environmentVariable name="__COMPAT_LAYER" value="GDIDPISCALING DPIUNAWARE" />
 					  <environmentVariable name="FP_UNITY_PATH" value="%FP_STARTUP_PATH%\BrowserPlugins\UnityWebPlayer\Unity3d2.x\loader" />
 					</environmentVariables>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\UNITY\WEBPLAYER"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\UNITY\WEBPLAYER"
 							valueName="DIRECTORY" value="%FP_STARTUP_PATH%\BrowserPlugins\UnityWebPlayer\Unity3d2.x"
 							valueKind="String" />
-					</registryBackups>
+					</registryStates>
 					<singleInstance executable="basilisk.exe" strict="false" />
 				</modifications>
 			</template>
