--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.abcisland.abcisland.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.abcisland.abcisland.dll.config
@@ -10,67 +10,67 @@
 					<environmentVariables>
 					  <environmentVariable name="__COMPAT_LAYER" value="Win2000Sp2" />
 					</environmentVariables>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLBOXWORDCTL.ATLBOXWORDCTLATTRIB.1"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLBOXWORDCTL.ATLBOXWORDCTLATTRIB.1"
 							valueName="" value="AtlBoxWordCtlAttrib Class" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLBOXWORDCTL.ATLBOXWORDCTLATTRIB.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLBOXWORDCTL.ATLBOXWORDCTLATTRIB.1\CLSID"
 							valueName="" value="{8DB0B6FB-914F-41de-B89E-35D80F378640}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLBOXWORDCTL.ATLBOXWORDCTLATTRIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLBOXWORDCTL.ATLBOXWORDCTLATTRIB"
 							valueName="" value="AtlBoxWordCtlAttrib Class" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLBOXWORDCTL.ATLBOXWORDCTLATTRIB\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLBOXWORDCTL.ATLBOXWORDCTLATTRIB\CLSID"
 							valueName="" value="{8DB0B6FB-914F-41de-B89E-35D80F378640}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLBOXWORDCTL.ATLBOXWORDCTLATTRIB\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLBOXWORDCTL.ATLBOXWORDCTLATTRIB\CURVER"
 							valueName="" value="AtlBoxWordCtl.AtlBoxWordCtlAttrib" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}"
 							valueName="" value="AtlBoxWordCtlAttrib Class" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\PROGID"
 							valueName="" value="AtlBoxWordCtl.AtlBoxWordCtlAttrib.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="AtlBoxWordCtl.AtlBoxWordCtlAttrib" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\abcisland\abcisland.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\CONTROL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\abcisland\abcisland.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\TYPELIB"
 							valueName="" value="{8CF3A9BC-EAD2-444D-BCCD-93361CA5B277}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8DB0B6FB-914F-41DE-B89E-35D80F378640}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8CF3A9BC-EAD2-444D-BCCD-93361CA5B277}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8CF3A9BC-EAD2-444D-BCCD-93361CA5B277}\1.0"
 							valueName="" value="ATLBOXWORD" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8CF3A9BC-EAD2-444D-BCCD-93361CA5B277}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8CF3A9BC-EAD2-444D-BCCD-93361CA5B277}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8CF3A9BC-EAD2-444D-BCCD-93361CA5B277}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8CF3A9BC-EAD2-444D-BCCD-93361CA5B277}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8CF3A9BC-EAD2-444D-BCCD-93361CA5B277}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8CF3A9BC-EAD2-444D-BCCD-93361CA5B277}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\abcisland\abcisland.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8CF3A9BC-EAD2-444D-BCCD-93361CA5B277}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8CF3A9BC-EAD2-444D-BCCD-93361CA5B277}\1.0\HELPDIR"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\abcisland\"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5D6BBD4B-8CA7-4298-9386-D1860C027F75}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5D6BBD4B-8CA7-4298-9386-D1860C027F75}"
 							valueName="" value="IBoxWordCtrl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5D6BBD4B-8CA7-4298-9386-D1860C027F75}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5D6BBD4B-8CA7-4298-9386-D1860C027F75}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5D6BBD4B-8CA7-4298-9386-D1860C027F75}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5D6BBD4B-8CA7-4298-9386-D1860C027F75}\TYPELIB"
 							valueName="" value="{8CF3A9BC-EAD2-444D-BCCD-93361CA5B277}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5D6BBD4B-8CA7-4298-9386-D1860C027F75}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5D6BBD4B-8CA7-4298-9386-D1860C027F75}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
