--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.atomaders.atomaders.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.atomaders.atomaders.dll.config
@@ -10,68 +10,68 @@
 					<environmentVariables>
 					  <environmentVariable name="__COMPAT_LAYER" value="Win2000Sp2" />
 					</environmentVariables>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLATOMADERCTL.ATLATOMADERCTLATTRIB.1"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLATOMADERCTL.ATLATOMADERCTLATTRIB.1"
 							valueName="" value="AtlAtomadersCtlAttrib Class" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLATOMADERCTL.ATLATOMADERCTLATTRIB.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLATOMADERCTL.ATLATOMADERCTLATTRIB.1\CLSID"
 							valueName="" value="{64D01C7F-810D-446E-A07E-456764235644}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLATOMADERCTL.ATLATOMADERCTLATTRIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLATOMADERCTL.ATLATOMADERCTLATTRIB"
 							valueName="" value="AtlAtomadersCtlAttrib Class" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLATOMADERCTL.ATLATOMADERCTLATTRIB\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLATOMADERCTL.ATLATOMADERCTLATTRIB\CLSID"
 							valueName="" value="{64D01C7F-810D-446E-A07E-456764235644}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLATOMADERCTL.ATLATOMADERCTLATTRIB\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLATOMADERCTL.ATLATOMADERCTLATTRIB\CURVER"
 							valueName="" value="AtlAtomaderCtl.AtlAtomaderCtlAttrib" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}"
 							valueName="" value="AtlAtomadersCtlAttrib Class" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\PROGID"
 							valueName="" value="AtlAtomaderCtl.AtlAtomaderCtlAttrib.1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="AtlAtomaderCtl.AtlAtomaderCtlAttrib" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Atomaders\Atomaders.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\CONTROL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Atomaders\Atomaders.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\TYPELIB"
 							valueName="" value="{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0"
 							valueName="" value="ATLFIREATTRLib" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Atomaders\Atomaders.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0\HELPDIR"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Atomaders\"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D61AF69C-AAF7-4FBB-823A-F55CCB2857A2}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D61AF69C-AAF7-4FBB-823A-F55CCB2857A2}"
 							valueName="" value="IAtomaderCtrl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D61AF69C-AAF7-4FBB-823A-F55CCB2857A2}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D61AF69C-AAF7-4FBB-823A-F55CCB2857A2}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D61AF69C-AAF7-4FBB-823A-F55CCB2857A2}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D61AF69C-AAF7-4FBB-823A-F55CCB2857A2}\TYPELIB"
 							valueName="" value="{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D61AF69C-AAF7-4FBB-823A-F55CCB2857A2}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D61AF69C-AAF7-4FBB-823A-F55CCB2857A2}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
