--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.axcontrol.axcontrol.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.axcontrol.axcontrol.dll.config
@@ -7,86 +7,86 @@
         <templates>
             <template name="activex\axcontrol\axcontrol.dll">
 				<modifications>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{D4B2F5DE-4BA6-4188-AD15-355A3A202849}"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{D4B2F5DE-4BA6-4188-AD15-355A3A202849}"
 							valueName="" value="ieplugin" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\IEGGPLUGIN.DLL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\IEGGPLUGIN.DLL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\IEGGPLUGIN.DLL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\IEGGPLUGIN.DLL"
 							valueName="APPID" value="{D4B2F5DE-4BA6-4188-AD15-355A3A202849}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\IEGGPLUGIN.GGPLUGIN.1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\IEGGPLUGIN.GGPLUGIN.1"
 							valueName="" value="CGGPlugin Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\IEGGPLUGIN.GGPLUGIN.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\IEGGPLUGIN.GGPLUGIN.1\CLSID"
 							valueName="" value="{CA47E69B-B484-44C1-8E29-19B6B2694810}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\IEGGPLUGIN.GGPLUGIN"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\IEGGPLUGIN.GGPLUGIN"
 							valueName="" value="CGGPlugin Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\IEGGPLUGIN.GGPLUGIN\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\IEGGPLUGIN.GGPLUGIN\CLSID"
 							valueName="" value="{CA47E69B-B484-44C1-8E29-19B6B2694810}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\IEGGPLUGIN.GGPLUGIN\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\IEGGPLUGIN.GGPLUGIN\CURVER"
 							valueName="" value="ieggplugin.GGPlugin.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}"
 							valueName="" value="CGGPlugin Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\PROGID"
 							valueName="" value="ieggplugin.GGPlugin.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="ieggplugin.GGPlugin" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\axcontrol\axcontrol.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\CONTROL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\axcontrol\axcontrol.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}"
 							valueName="APPID" value="{D4B2F5DE-4BA6-4188-AD15-355A3A202849}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\TYPELIB"
 							valueName="" value="{D4B2F5DE-4BA6-4188-AD15-355A3A202849}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{CA47E69B-B484-44C1-8E29-19B6B2694810}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D4B2F5DE-4BA6-4188-AD15-355A3A202849}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D4B2F5DE-4BA6-4188-AD15-355A3A202849}\1.0"
 							valueName="" value="ieplugin 1.0 Type Library" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D4B2F5DE-4BA6-4188-AD15-355A3A202849}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D4B2F5DE-4BA6-4188-AD15-355A3A202849}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D4B2F5DE-4BA6-4188-AD15-355A3A202849}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D4B2F5DE-4BA6-4188-AD15-355A3A202849}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D4B2F5DE-4BA6-4188-AD15-355A3A202849}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D4B2F5DE-4BA6-4188-AD15-355A3A202849}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\axcontrol\axcontrol.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D4B2F5DE-4BA6-4188-AD15-355A3A202849}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D4B2F5DE-4BA6-4188-AD15-355A3A202849}\1.0\HELPDIR"
 							valueName="" value="" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F1D0FA17-EAC1-4CAE-A3B3-99D5091751A3}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F1D0FA17-EAC1-4CAE-A3B3-99D5091751A3}"
 							valueName="" value="_IGGPluginEvents" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F1D0FA17-EAC1-4CAE-A3B3-99D5091751A3}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F1D0FA17-EAC1-4CAE-A3B3-99D5091751A3}\PROXYSTUBCLSID32"
 							valueName="" value="{00020420-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F1D0FA17-EAC1-4CAE-A3B3-99D5091751A3}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F1D0FA17-EAC1-4CAE-A3B3-99D5091751A3}\TYPELIB"
 							valueName="" value="{D4B2F5DE-4BA6-4188-AD15-355A3A202849}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F1D0FA17-EAC1-4CAE-A3B3-99D5091751A3}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F1D0FA17-EAC1-4CAE-A3B3-99D5091751A3}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F355E5E7-1209-40B6-92B2-AE10A145FB2B}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F355E5E7-1209-40B6-92B2-AE10A145FB2B}"
 							valueName="" value="IGGPlugin" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F355E5E7-1209-40B6-92B2-AE10A145FB2B}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F355E5E7-1209-40B6-92B2-AE10A145FB2B}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F355E5E7-1209-40B6-92B2-AE10A145FB2B}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F355E5E7-1209-40B6-92B2-AE10A145FB2B}\TYPELIB"
 							valueName="" value="{D4B2F5DE-4BA6-4188-AD15-355A3A202849}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F355E5E7-1209-40B6-92B2-AE10A145FB2B}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{F355E5E7-1209-40B6-92B2-AE10A145FB2B}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
