--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.gamehouseplayer.ghgamesplayer.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.gamehouseplayer.ghgamesplayer.dll.config
@@ -7,79 +7,79 @@
         <templates>
             <template name="activex\gamehouseplayer\ghgamesplayer.dll">
 				<modifications>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\GHGAMESPLAYER.GHGAMESPLAYERCTRLGH.1"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\GHGAMESPLAYER.GHGAMESPLAYERCTRLGH.1"
 							valueName="" value="GameHouse Games Player" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\GHGAMESPLAYER.GHGAMESPLAYERCTRLGH.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\GHGAMESPLAYER.GHGAMESPLAYERCTRLGH.1\CLSID"
 							valueName="" value="{74E4A24D-5224-4f05-8A41-99445E0FC22B}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\GHGAMESPLAYER.GHGAMESPLAYERCTRLGH"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\GHGAMESPLAYER.GHGAMESPLAYERCTRLGH"
 							valueName="" value="GameHouse Games Player" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\GHGAMESPLAYER.GHGAMESPLAYERCTRLGH\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\GHGAMESPLAYER.GHGAMESPLAYERCTRLGH\CLSID"
 							valueName="" value="{74E4A24D-5224-4f05-8A41-99445E0FC22B}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\GHGAMESPLAYER.GHGAMESPLAYERCTRLGH\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\GHGAMESPLAYER.GHGAMESPLAYERCTRLGH\CURVER"
 							valueName="" value="GHGamesPlayer.GHGamesPlayerCtrlGH.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}"
 							valueName="" value="GameHouse Games Player" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\PROGID"
 							valueName="" value="GHGamesPlayer.GHGamesPlayerCtrlGH.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="GHGamesPlayer.GHGamesPlayerCtrlGH" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\PROGRAMMABLE"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\PROGRAMMABLE"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\gamehouseplayer\GHGamesPlayer.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="Apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\CONTROL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\gamehouseplayer\GHGamesPlayer.dll, 101"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\TYPELIB"
 							valueName="" value="{69646C39-01BA-4aa4-A947-D9FC39D8A35F}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0"
 							valueName="" value="ZYLOMGAMESPLAYERLib" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\gamehouseplayer\GHGamesPlayer.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0\HELPDIR"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\gamehouseplayer\"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B4100D79-B762-4B90-ACFA-5FC043C822A5}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B4100D79-B762-4B90-ACFA-5FC043C822A5}"
 							valueName="" value="_IZylomGamesPlayerCtrlEvents" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B4100D79-B762-4B90-ACFA-5FC043C822A5}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B4100D79-B762-4B90-ACFA-5FC043C822A5}\PROXYSTUBCLSID32"
 							valueName="" value="{00020420-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B4100D79-B762-4B90-ACFA-5FC043C822A5}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B4100D79-B762-4B90-ACFA-5FC043C822A5}\TYPELIB"
 							valueName="" value="{69646C39-01BA-4AA4-A947-D9FC39D8A35F}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B4100D79-B762-4B90-ACFA-5FC043C822A5}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B4100D79-B762-4B90-ACFA-5FC043C822A5}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5BFCD9C9-B651-42CA-9A82-E09B9054734C}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5BFCD9C9-B651-42CA-9A82-E09B9054734C}"
 							valueName="" value="IZylomGamesPlayerCtrl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5BFCD9C9-B651-42CA-9A82-E09B9054734C}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5BFCD9C9-B651-42CA-9A82-E09B9054734C}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5BFCD9C9-B651-42CA-9A82-E09B9054734C}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5BFCD9C9-B651-42CA-9A82-E09B9054734C}\TYPELIB"
 							valueName="" value="{69646C39-01BA-4AA4-A947-D9FC39D8A35F}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5BFCD9C9-B651-42CA-9A82-E09B9054734C}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{5BFCD9C9-B651-42CA-9A82-E09B9054734C}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
