--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.greatchocolatechaseweb.1.0.0.12.greatchocolatechaseweb.1.0.0.12.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.greatchocolatechaseweb.1.0.0.12.greatchocolatechaseweb.1.0.0.12.dll.config
@@ -7,78 +7,78 @@
         <templates>
             <template name="activex\greatchocolatechaseweb.1.0.0.12\greatchocolatechaseweb.1.0.0.12.dll">
 				<modifications>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{CCA112AE-25CE-494E-8C12-D2585EABB902}"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{CCA112AE-25CE-494E-8C12-D2585EABB902}"
 							valueName="" value="activex" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
 							valueName="APPID" value="{CCA112AE-25CE-494E-8C12-D2585EABB902}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTGREATCHOCOCONTROL.1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTGREATCHOCOCONTROL.1"
 							valueName="" value="CPlayFirstGreatChocoControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTGREATCHOCOCONTROL.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTGREATCHOCOCONTROL.1\CLSID"
 							valueName="" value="{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTGREATCHOCOCONTROL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTGREATCHOCOCONTROL"
 							valueName="" value="CPlayFirstGreatChocoControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTGREATCHOCOCONTROL\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTGREATCHOCOCONTROL\CLSID"
 							valueName="" value="{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTGREATCHOCOCONTROL\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTGREATCHOCOCONTROL\CURVER"
 							valueName="" value="activex.PlayFirstGreatChocoControl.1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}"
 							valueName="" value="CPlayFirstGreatChocoControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\PROGID"
 							valueName="" value="activex.PlayFirstGreatChocoControl.1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="activex.PlayFirstGreatChocoControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\greatchocolatechaseweb.1.0.0.12\GreatChocolateChaseWeb.1.0.0.12.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\CONTROL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\greatchocolatechaseweb.1.0.0.12\GreatChocolateChaseWeb.1.0.0.12.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}"
 							valueName="APPID" value="{CCA112AE-25CE-494E-8C12-D2585EABB902}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\TYPELIB"
 							valueName="" value="{CCA112AE-25CE-494E-8C12-D2585EABB902}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0"
 							valueName="" value="activex 1.0 Type Library" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\greatchocolatechaseweb.1.0.0.12\GreatChocolateChaseWeb.1.0.0.12.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0\HELPDIR"
 							valueName="" value="" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{613E4B02-FCFB-43FF-A1AB-2E3C3FA9F4ED}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{613E4B02-FCFB-43FF-A1AB-2E3C3FA9F4ED}"
 							valueName="" value="IPlayFirstGreatChocoControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{613E4B02-FCFB-43FF-A1AB-2E3C3FA9F4ED}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{613E4B02-FCFB-43FF-A1AB-2E3C3FA9F4ED}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{613E4B02-FCFB-43FF-A1AB-2E3C3FA9F4ED}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{613E4B02-FCFB-43FF-A1AB-2E3C3FA9F4ED}\TYPELIB"
 							valueName="" value="{CCA112AE-25CE-494E-8C12-D2585EABB902}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{613E4B02-FCFB-43FF-A1AB-2E3C3FA9F4ED}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{613E4B02-FCFB-43FF-A1AB-2E3C3FA9F4ED}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
