--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.parkingdash.parkingdashweb.1.0.0.10.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.parkingdash.parkingdashweb.1.0.0.10.dll.config
@@ -7,78 +7,78 @@
         <templates>
             <template name="activex\parkingdash\parkingdashweb.1.0.0.10.dll">
 				<modifications>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}"
 							valueName="" value="activex" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
 							valueName="APPID" value="{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTPARKINGDASCONTROL.1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTPARKINGDASCONTROL.1"
 							valueName="" value="CPlayFirstParkingDasControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTPARKINGDASCONTROL.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTPARKINGDASCONTROL.1\CLSID"
 							valueName="" value="{F135A813-7152-4532-AC8D-28AC2136DFC7}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTPARKINGDASCONTROL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTPARKINGDASCONTROL"
 							valueName="" value="CPlayFirstParkingDasControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTPARKINGDASCONTROL\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTPARKINGDASCONTROL\CLSID"
 							valueName="" value="{F135A813-7152-4532-AC8D-28AC2136DFC7}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTPARKINGDASCONTROL\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTPARKINGDASCONTROL\CURVER"
 							valueName="" value="activex.PlayFirstParkingDasControl.1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}"
 							valueName="" value="CPlayFirstParkingDasControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\PROGID"
 							valueName="" value="activex.PlayFirstParkingDasControl.1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="activex.PlayFirstParkingDasControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\parkingdash\ParkingDashWeb.1.0.0.10.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\CONTROL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\parkingdash\ParkingDashWeb.1.0.0.10.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}"
 							valueName="APPID" value="{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\TYPELIB"
 							valueName="" value="{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0"
 							valueName="" value="activex 1.0 Type Library" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\parkingdash\ParkingDashWeb.1.0.0.10.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0\HELPDIR"
 							valueName="" value="" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D920D99B-52E0-4E69-BDA5-FC644B1D61F7}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D920D99B-52E0-4E69-BDA5-FC644B1D61F7}"
 							valueName="" value="IPlayFirstParkingDasControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D920D99B-52E0-4E69-BDA5-FC644B1D61F7}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D920D99B-52E0-4E69-BDA5-FC644B1D61F7}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D920D99B-52E0-4E69-BDA5-FC644B1D61F7}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D920D99B-52E0-4E69-BDA5-FC644B1D61F7}\TYPELIB"
 							valueName="" value="{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D920D99B-52E0-4E69-BDA5-FC644B1D61F7}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D920D99B-52E0-4E69-BDA5-FC644B1D61F7}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
