--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.pulse.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.pulse.config
@@ -7,110 +7,110 @@
         <templates>
             <template name="activex\pulse">
 				<modifications>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE.1"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE.1"
 							valueName="" value="AxPulse Class" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE.1\CLSID"
 							valueName="" value="{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE"
 							valueName="" value="AxPulse Class" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE\CURVER"
 							valueName="" value="AxPulse.AxPulse.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}"
 							valueName="" value="AxPulse Class" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\PROGID"
 							valueName="" value="AxPulse.AxPulse.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="AxPulse.AxPulse" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\PROGRAMMABLE"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\PROGRAMMABLE"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Pulse\AxPulse.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="Apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\CONTROL"
 							valueName="" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\INSERTABLE"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\INSERTABLE"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Pulse\AxPulse.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\TYPELIB"
 							valueName="" value="{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D6016EE7-A8FF-11D1-B37E-A4759ECD7909}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE5.1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE5.1"
 							valueName="" value="Pulse V5 ActiveX Control" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE5.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE5.1\CLSID"
 							valueName="" value="{A48D0309-8DA3-41aa-98E4-89194D471890}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE5"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE5"
 							valueName="" value="Pulse V5 ActiveX Control" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE5\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE5\CURVER"
 							valueName="" value="AxPulse.AxPulse5.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}"
 							valueName="" value="Pulse V5 ActiveX Control" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\PROGID"
 							valueName="" value="AxPulse.AxPulse5.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="AxPulse.AxPulse5" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\PROGRAMMABLE"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\PROGRAMMABLE"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Pulse\AxPulse5.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="Apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\CONTROL"
 							valueName="" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\INSERTABLE"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\INSERTABLE"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Pulse\AxPulse5.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\TYPELIB"
 							valueName="" value="{F1DF76FC-7696-465b-8B29-F2F1E44691D7}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{A48D0309-8DA3-41AA-98E4-89194D471890}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0"
 							valueName="" value="AxPulse 1.0 Type Library"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Pulse\AxPulse.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0\HELPDIR"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Pulse\"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0"
 							valueName="" value="AxPulse 1.0 Type Library"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Pulse\AxPulse5.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0\HELPDIR"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Pulse\"
 							valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
