--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.raptisoftgameloader.rsgameloader.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.raptisoftgameloader.rsgameloader.dll.config
@@ -10,75 +10,75 @@
 					<environmentVariables>
 					  <environmentVariable name="__COMPAT_LAYER" value="Win2000Sp2" />
 					</environmentVariables>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\RSGAMELOADER.RSGAMELOADERCTRL.1"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\RSGAMELOADER.RSGAMELOADERCTRL.1"
 							valueName="" value="CRSGameLoaderCtrl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\RSGAMELOADER.RSGAMELOADERCTRL.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\RSGAMELOADER.RSGAMELOADERCTRL.1\CLSID"
 							valueName="" value="{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\RSGAMELOADER.RSGAMELOADERCTRL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\RSGAMELOADER.RSGAMELOADERCTRL"
 							valueName="" value="CRSGameLoaderCtrl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\RSGAMELOADER.RSGAMELOADERCTRL\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\RSGAMELOADER.RSGAMELOADERCTRL\CLSID"
 							valueName="" value="{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\RSGAMELOADER.RSGAMELOADERCTRL\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\RSGAMELOADER.RSGAMELOADERCTRL\CURVER"
 							valueName="" value="RSGameLoader.RSGameLoaderCtrl.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}"
 							valueName="" value="CRSGameLoaderCtrl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\PROGID"
 							valueName="" value="RSGameLoader.RSGameLoaderCtrl.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="RSGameLoader.RSGameLoaderCtrl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\raptisoftgameloader\RSGameLoader.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\CONTROL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\raptisoftgameloader\RSGameLoader.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}"
 							valueName="APPID" value="" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\TYPELIB"
 							valueName="" value="{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0"
 							valueName="" value="RSGameLoader 1.0 Type Library" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\raptisoftgameloader\RSGameLoader.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0\HELPDIR"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\raptisoftgameloader\"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CFC863D9-C682-49F9-8EC4-8090907AC8FA}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CFC863D9-C682-49F9-8EC4-8090907AC8FA}"
 							valueName="" value="IRSGameLoaderCtrl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CFC863D9-C682-49F9-8EC4-8090907AC8FA}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CFC863D9-C682-49F9-8EC4-8090907AC8FA}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CFC863D9-C682-49F9-8EC4-8090907AC8FA}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CFC863D9-C682-49F9-8EC4-8090907AC8FA}\TYPELIB"
 							valueName="" value="{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CFC863D9-C682-49F9-8EC4-8090907AC8FA}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CFC863D9-C682-49F9-8EC4-8090907AC8FA}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\IMPLEMENTED CATEGORIES"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\IMPLEMENTED CATEGORIES"
 							valueName="" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\IMPLEMENTED CATEGORIES\{7DD95802-9882-11CF-9FA9-00AA006C42C4}"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\IMPLEMENTED CATEGORIES\{7DD95802-9882-11CF-9FA9-00AA006C42C4}"
 							valueName="" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\IMPLEMENTED CATEGORIES\{7DD95801-9882-11CF-9FA9-00AA006C42C4}"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\IMPLEMENTED CATEGORIES\{7DD95801-9882-11CF-9FA9-00AA006C42C4}"
 							valueName="" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
