--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.sweetopia.1.0.0.22.sweetopia.1.0.0.22.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.sweetopia.1.0.0.22.sweetopia.1.0.0.22.dll.config
@@ -7,69 +7,69 @@
         <templates>
             <template name="activex\sweetopia.1.0.0.22\sweetopia.1.0.0.22.dll">
 				<modifications>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTSWEETOPIACONTROL.1"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTSWEETOPIACONTROL.1"
 							valueName="" value="CPlayFirstSweetopiaControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTSWEETOPIACONTROL.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTSWEETOPIACONTROL.1\CLSID"
 							valueName="" value="{FC4CAF5F-91BD-4dd9-ADC1-F3C737E37BC4}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTSWEETOPIACONTROL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTSWEETOPIACONTROL"
 							valueName="" value="CPlayFirstSweetopiaControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTSWEETOPIACONTROL\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTSWEETOPIACONTROL\CLSID"
 							valueName="" value="{FC4CAF5F-91BD-4dd9-ADC1-F3C737E37BC4}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTSWEETOPIACONTROL\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTSWEETOPIACONTROL\CURVER"
 							valueName="" value="activex.PlayFirstSweetopiaControl.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}"
 							valueName="" value="CPlayFirstSweetopiaControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\PROGID"
 							valueName="" value="activex.PlayFirstSweetopiaControl.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="activex.PlayFirstSweetopiaControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Sweetopia.1.0.0.22\Sweetopia.1.0.0.22.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\CONTROL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Sweetopia.1.0.0.22\Sweetopia.1.0.0.22.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}"
 							valueName="APPID" value="" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\TYPELIB"
 							valueName="" value="{590539A5-E2AA-4244-A04C-DBD7805E317F}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0"
 							valueName="" value="activex 1.0 Type Library" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Sweetopia.1.0.0.22\Sweetopia.1.0.0.22.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0\HELPDIR"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\Sweetopia.1.0.0.22\"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{9B921314-7401-485F-A9AB-99D8280DE969}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{9B921314-7401-485F-A9AB-99D8280DE969}"
 							valueName="" value="IPlayFirstSweetopiaControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{9B921314-7401-485F-A9AB-99D8280DE969}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{9B921314-7401-485F-A9AB-99D8280DE969}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{9B921314-7401-485F-A9AB-99D8280DE969}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{9B921314-7401-485F-A9AB-99D8280DE969}\TYPELIB"
 							valueName="" value="{590539A5-E2AA-4244-A04C-DBD7805E317F}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{9B921314-7401-485F-A9AB-99D8280DE969}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{9B921314-7401-485F-A9AB-99D8280DE969}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
