--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.tastyplanet.1.0.0.4.tastyplanet.1.0.0.4.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.tastyplanet.1.0.0.4.tastyplanet.1.0.0.4.dll.config
@@ -7,79 +7,79 @@
         <templates>
             <template name="activex\tastyplanet.1.0.0.4\tastyplanet.1.0.0.4.dll">
 				<modifications>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{EFE62716-7828-4CB8-A5FD-812832CCF948}"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{EFE62716-7828-4CB8-A5FD-812832CCF948}"
 							valueName="" value="activex" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
 							valueName="APPID" value="{EFE62716-7828-4cb8-A5FD-812832CCF948}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTTASTYPLANETCONTROL.1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTTASTYPLANETCONTROL.1"
 							valueName="" value="CPlayFirsttastyplanetControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTTASTYPLANETCONTROL.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTTASTYPLANETCONTROL.1\CLSID"
 							valueName="" value="{1CDFA4E8-3396-439d-8C9D-AD0E32DE94B6}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTTASTYPLANETCONTROL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTTASTYPLANETCONTROL"
 							valueName="" value="CPlayFirsttastyplanetControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTTASTYPLANETCONTROL\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTTASTYPLANETCONTROL\CLSID"
 							valueName="" value="{1CDFA4E8-3396-439d-8C9D-AD0E32DE94B6}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTTASTYPLANETCONTROL\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTTASTYPLANETCONTROL\CURVER"
 							valueName="" value="activex.PlayFirsttastyplanetControl.1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}"
 							valueName="" value="CPlayFirsttastyplanetControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\PROGID"
 							valueName="" value="activex.PlayFirsttastyplanetControl.1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="activex.PlayFirsttastyplanetControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\tastyplanet.1.0.0.4\tastyplanet.1.0.0.4.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\CONTROL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\tastyplanet.1.0.0.4\tastyplanet.1.0.0.4.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}"
 							valueName="APPID" value="{EFE62716-7828-4cb8-A5FD-812832CCF948}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\TYPELIB"
 							valueName="" value="{EFE62716-7828-4CB8-A5FD-812832CCF948}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0"
 							valueName="" value="activex 1.0 Type Library" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\tastyplanet.1.0.0.4\tastyplanet.1.0.0.4.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0\HELPDIR"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\tastyplanet.1.0.0.4\"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{C7C6AD87-546C-446A-B833-45F528922D12}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{C7C6AD87-546C-446A-B833-45F528922D12}"
 							valueName="" value="IPlayFirsttastyplanetControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{C7C6AD87-546C-446A-B833-45F528922D12}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{C7C6AD87-546C-446A-B833-45F528922D12}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{C7C6AD87-546C-446A-B833-45F528922D12}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{C7C6AD87-546C-446A-B833-45F528922D12}\TYPELIB"
 							valueName="" value="{EFE62716-7828-4CB8-A5FD-812832CCF948}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{C7C6AD87-546C-446A-B833-45F528922D12}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{C7C6AD87-546C-446A-B833-45F528922D12}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
