--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.zenerchiweb.1.0.0.10.zenerchi.1.0.0.10.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.zenerchiweb.1.0.0.10.zenerchi.1.0.0.10.dll.config
@@ -7,77 +7,77 @@
         <templates>
             <template name="activex\zenerchiweb.1.0.0.10\zenerchi.1.0.0.10.dll">
 				<modifications>
-					<registryBackups binaryType="SCS_32BIT_BINARY">
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}"
+					<registryStates binaryType="SCS_32BIT_BINARY">
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}"
 							valueName="" value="activex" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\APPID\ACTIVEX.DLL"
 							valueName="APPID" value="{5AC74EDA-8E82-4f9d-A0CA-3CF38CA16F64}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTZENERCHICONTROL.1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTZENERCHICONTROL.1"
 							valueName="" value="CPlayFirstzenerchiControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTZENERCHICONTROL.1\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTZENERCHICONTROL.1\CLSID"
 							valueName="" value="{BAC761D3-DFFD-4db4-A01D-173346E090A7}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTZENERCHICONTROL"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTZENERCHICONTROL"
 							valueName="" value="CPlayFirstzenerchiControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTZENERCHICONTROL\CLSID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTZENERCHICONTROL\CLSID"
 							valueName="" value="{BAC761D3-DFFD-4db4-A01D-173346E090A7}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTZENERCHICONTROL\CURVER"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ACTIVEX.PLAYFIRSTZENERCHICONTROL\CURVER"
 							valueName="" value="activex.PlayFirstzenerchiControl.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}"
 							valueName="" value="CPlayFirstzenerchiControl Object" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\PROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\PROGID"
 							valueName="" value="activex.PlayFirstzenerchiControl.1" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\VERSIONINDEPENDENTPROGID"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\VERSIONINDEPENDENTPROGID"
 							valueName="" value="activex.PlayFirstzenerchiControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\INPROCSERVER32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\ZenerchiWeb.1.0.0.10\zenerchi.1.0.0.10.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\INPROCSERVER32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\INPROCSERVER32"
 							valueName="THREADINGMODEL" value="apartment" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\CONTROL"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\CONTROL"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\TOOLBOXBITMAP32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\TOOLBOXBITMAP32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\ZenerchiWeb.1.0.0.10\zenerchi.1.0.0.10.dll, 1"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\MISCSTATUS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\MISCSTATUS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\MISCSTATUS\1"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\MISCSTATUS\1"
 							valueName="" value="131473" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}"
 							valueName="APPID" value="{5AC74EDA-8E82-4f9d-A0CA-3CF38CA16F64}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\TYPELIB"
 							valueName="" value="{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\VERSION"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\VERSION"
 							valueName="" value="1.0" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0"
 							valueName="" value="activex 1.0 Type Library" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0\FLAGS"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0\FLAGS"
 							valueName="" value="0" valueKind="String" />
-						<registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0\0"
+						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0\0"
 							valueName="" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0\0\WIN32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0\0\WIN32"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\ZenerchiWeb.1.0.0.10\zenerchi.1.0.0.10.dll"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0\HELPDIR"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0\HELPDIR"
 							valueName="" value="%FP_STARTUP_PATH%\ActiveX\ZenerchiWeb.1.0.0.10\"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B617B3A8-2FB0-4C2E-A236-B4A4AF54B3FB}"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B617B3A8-2FB0-4C2E-A236-B4A4AF54B3FB}"
 							valueName="" value="IPlayFirstzenerchiControl" valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B617B3A8-2FB0-4C2E-A236-B4A4AF54B3FB}\PROXYSTUBCLSID32"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B617B3A8-2FB0-4C2E-A236-B4A4AF54B3FB}\PROXYSTUBCLSID32"
 							valueName="" value="{00020424-0000-0000-C000-000000000046}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B617B3A8-2FB0-4C2E-A236-B4A4AF54B3FB}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B617B3A8-2FB0-4C2E-A236-B4A4AF54B3FB}\TYPELIB"
 							valueName="" value="{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}"
 							valueKind="String" />
-						<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B617B3A8-2FB0-4C2E-A236-B4A4AF54B3FB}\TYPELIB"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B617B3A8-2FB0-4C2E-A236-B4A4AF54B3FB}\TYPELIB"
 							valueName="VERSION" value="1.0" valueKind="String" />
-					</registryBackups>
+					</registryStates>
 				</modifications>
             </template>
         </templates>
