--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/live3d.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/live3d.config
@@ -15,7 +15,7 @@
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="NETHELP DIRECTORY" value="%FP_STARTUP_PATH%\Netscape4\Communicator\Program\NetHelp" valueKind="String" />
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="PLUGINS DIRECTORY" value="%FP_STARTUP_PATH%\Netscape4\Communicator\Program\Plugins" valueKind="String" />
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="PROGRAM FOLDER" value="Netscape Navigator" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\USERS" valueName="CURRENTUSER" value="default" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\USERS" valueName="CURRENTUSER" value="DEFAULT" valueKind="String" />
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\USERS\DEFAULT" valueName="DIRROOT" value="%FP_STARTUP_PATH%\Netscape4\Users\default" valueKind="String" />
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\USERS\DEFAULT" valueName="USERNAME" value="Flashpoint" valueKind="String" />
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\USERS\DEFAULT" valueName="EMAILADDR" value="" valueKind="String" />
